[project]
name = "data-ai-template"
version = "1.0.0"
description = "A Template for Data & AI Projects"
authors = [
    {name = "Datafy Associates", email = "info@datafyassociates.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit==1.38.0",
    "langchain-anthropic==0.2.3",
    "duckduckgo-search==6.3.2",
    "langchain-exa==0.2.0",
    "streamlit-audiorecorder==0.0.4",
    "jupyterlab==4.2.5",
    "plotly==5.20.0",
    "ipywidgets>=7.0.0,<8",
    "langchain-community==0.3.2",
    "matplotlib==3.9.2",
    "loguru==0.7.2",
    "jsons==1.6.3",
    "llama-index==0.11.18",
    "llama-index-embeddings-openai==0.2.5",
    "llama-index-llms-openai==0.2.15",
    "llama-index-vector-stores-qdrant==0.3.2",
    "langchain-experimental==0.3.2",
    "langchain-openai==0.2.2",
    "toml==0.10.2",
    "pandas==2.2.2",
]

[project.optional-dependencies]
dev = [
    "python-dotenv==1.0.0",
    "pytest==7.2.1",
]
lint = [
    "isort==5.12.0",
    "black==23.1a1",
    "flake8==6.0.0",
]

[tool.isort]
profile = "black"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"